--- a/src/app/shared/header/components/header.component.html
+++ b/src/app/shared/header/components/header.component.html
@@ -1,18 +1,17 @@
 <div class="container">
-  <section class="title-wrapper">
+  <section class="header-wrapper">
     <img
-      class="user-avatar-mobile"
+      src="assets/images/profile.svg"
       [routerLink]="['/profile']"
     />
-    <img class="logo" alt="logo" src="assets/icons/logo-cokids-white.svg" />
-  </section>
+    <img class="logo" src="assets/images/logo.svg" alt="Logo">
 
-  <ng-template #backMenu>
-    <section class="title-wrapper">
-      <span class="material-icons-outlined icon" (click)="navigate()">arrow_back</span>
-      <span class="current-path" >
-        NEW HEADER
-      </span>
-    </section>
-  </ng-template>
+    <div class="d-flex">
+      <img src="assets/images/weather.svg" alt="weather">
+      <section class="translate">
+        <img class="translate-icon" src="assets/images/translate.svg" alt="translate">
+        <p class="translate-label">ESP</p>
+      </section>
+    </div>
+  </section>
 </div>
