--- a/src/app/shared/header/components/header.component.html
+++ b/src/app/shared/header/components/header.component.html
@@ -9,6 +9,7 @@
       <img
         src="assets/images/profile.svg"
         [routerLink]="['/profile']"
+        alt="profile"
       />
       <img class="logo" src="assets/images/logo.svg" alt="Logo">
 
