--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -1,1 +1,24 @@
 <app-shared-header></app-shared-header>
+
+<div class="container monserrat">
+  <section class="trip-container">
+    <div class="button-container">
+      <div class="label">7 MIN.</div>
+      <div class="button">SOLICITAR UNIDAD</div>
+    </div>
+  </section>
+  <section class="experience-container">
+    <div class="button-container">
+      <div class="label">SOON</div>
+      <div class="button">SOLICITAR UNIDAD</div>
+    </div>
+  </section>
+  <section class="shared-container">
+    <section class="airport-container">
+      <div class="button">VIAJE AEROPUERTO</div>
+    </section>
+    <section class="specials-container">
+      <div class="button">ESPECIALES</div>
+    </section>
+  </section>
+</div>
