--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './app/core/sass/global';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 :root,
 html {
@@ -37,3 +38,7 @@ a {
 .d-flex { display: flex; }
 
 .pointer { cursor: pointer; }
+
+.monserrat {
+  font-family: 'Montserrat', sans-serif;
+}
