primary button created and added to home

--- a/src/app/passengers/containers/home/home.component.scss
+++ b/src/app/passengers/containers/home/home.component.scss
@@ -7,6 +7,12 @@
   gap: 0.7rem;
 }
 
+.main-button {
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem;
+}
+
 .trip-container {
   height: 31.6rem;
   width: 34.2rem;
