--- a/src/app/passengers/containers/experiences/experiences.component.html
+++ b/src/app/passengers/containers/experiences/experiences.component.html
@@ -1,1 +1,26 @@
-<p>experiences works!</p>
+<app-shared-header></app-shared-header>
+
+<div class="container">
+    <section class="experience-container monserrat">
+        <div class="label">SOON</div>
+        <img class="title" src="../../../../assets/images/raptor-experience.svg" alt="raptor" />
+    </section>
+    <section class="driveit-container">
+        <div class="content">
+            <div class="title monserrat">MANEJALO TU MISMO</div>
+            <p class="paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, quia alias sunt
+                rerum voluptatem nesciunt in voluptates repellendus, animi similique repellat ut delectus possimus
+                quidem temporibus at? Debitis, dignissimos nemo!
+            </p>
+            <div class="footer">TERMINOS Y CONDICIONES</div>
+        </div>
+    </section>
+    <section class="soon-container">
+        <div class="label">SOON</div>
+        <div class="footer">CAR OF THE WEEK</div>
+    </section>
+</div>
+<div class="main-button">
+    <app-primary-button>MIS VIAJES</app-primary-button>
+</div>
