--- a/src/app/passengers/containers/experiences/experiences.component.scss
+++ b/src/app/passengers/containers/experiences/experiences.component.scss
@@ -1,130 +1,91 @@
 @import 'src/app/core/sass/global';
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: $white;
+  gap: 0.7rem;
 }
 
 .main-button {
-    display: flex;
-    justify-content: center;
-    margin: 0.5rem;
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem;
+}
+
+.label {
+  display: flex;
+  font-weight: bold;
+  align-self: flex-end;
+  justify-content: center;
+  background-color: $green;
+  color: $black;
+  margin: 1.5rem;
+  width: 7.4rem;
+  font-size: 0.8rem;
+  border-radius: 0.3rem;
+}
+
+.driveit-container, .car-container, .experience-container {
+  height: 13.2rem;
+  width: 34.2rem;
+  border-radius: 0.6rem;
 }
 
 .experience-container {
-    height: 31.6rem;
-    width: 34.2rem;
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/raptor.png');
-    border-radius: 0.6rem;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-    gap: 9.5rem;
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/raptor.png');
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 9.5rem;
+  border-radius: 0.6rem;
+  height: 31.6rem;
+  width: 34.2rem;
 
-    .label {
-        height: 2rem;
-        margin: 1.5rem;
-        align-self: flex-end;
-    }
-
-    .title {
-        margin-bottom: 1rem;
-    }
-
+  .raptor {
+    height: 2.6rem;
+  }
 }
 
 .driveit-container {
-    height: 13.2rem;
-    width: 34.2rem;
-    border-radius: 0.6rem;
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/drive-it-yourself.png');
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/drive-it-yourself.png');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
 
-    .content {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 2rem;
-
-        .title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-            color: white;
-            letter-spacing: .6rem;
-        }
-
-        .paragraph {
-            font-size: .7rem;
-            color: white;
-            text-align: center;
-            line-height: .9rem;
-        }
-
-        .footer {
-            font-size: .9rem;
-            color: white;
-            text-align: center;
-            line-height: .9rem;
-        }
-    }
-}
-
-.soon-container {
-    height: 13.2rem;
-    width: 34.2rem;
-    border-radius: 0.6rem;
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/supra.png');
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    .label {
-        height: 2rem;
-        margin: 1.5rem;
-        align-self: flex-end;
-    }
-
-    .footer {
-        font-size: 1.1rem;
-        font-weight: bold;
-        margin-bottom: 1.2rem;
-        color: white;
-        letter-spacing: .6rem;
-    }
-}
-
-.button {
-    width: 11.7rem;
-    background-color: $white;
-}
-
-.label {
-    width: 6.6rem;
-    background-color: $green;
-}
-
-.button-container {
-    display: flex;
-    gap: 0.5rem;
-    margin: 1.4rem;
-}
-
-.button,
-.label {
-    display: flex;
-    justify-content: center;
+  .title {
     font-size: 0.8rem;
+    letter-spacing: 0.8rem;
     font-weight: bold;
-    border-radius: 0.3rem;
+  }
+
+  .paragraph {
+    margin: 0;
+    font-size: 0.7rem;
+    line-height: 1rem;
+    width: 24.5rem;
+    text-align: center;
+  }
+
+  .footer {
+    font-size: 0.6rem;
+  }
+}
+
+.car-container {
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/supra.png');
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  .car-label {
+    font-weight: bold;
+    font-size: 0.5rem;
+    letter-spacing: 0.6rem;
+    margin-bottom: 0.5rem;
+  }
 }
