minor improvements in routing and linting

--- a/src/app/shared/header/components/header.component.html
+++ b/src/app/shared/header/components/header.component.html
@@ -11,7 +11,7 @@
         [routerLink]="['/profile']"
         alt="profile"
       />
-      <img class="logo" src="assets/images/logo.svg" alt="Logo">
+      <img class="logo" (click)='navigate()' src="assets/images/logo.svg" alt="Logo">
 
       <div class="d-flex">
         <img src="assets/images/weather.svg" alt="weather">
