--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -7,10 +7,10 @@
       <div class="button">SOLICITAR UNIDAD</div>
     </div>
   </section>
-  <section class="experience-container">
+  <section class="experience-container" [routerLink]="['../experiences']">
     <div class="button-container">
       <div class="label">SOON</div>
-      <div class="button">SOLICITAR UNIDAD</div>
+      <div class="button">EXPERIENCIAS</div>
     </div>
   </section>
   <section class="shared-container">
