customer-service-view

--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </section>
-  <section class="customer-service">
+  <section class="customer-service" [routerLink]="['../customer-service']">
     <img class="image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz.png" alt="Customer Image">
     <p class="service-label">SERVICIO AL CLIENTE</p>
   </section>
