--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -14,7 +14,7 @@
         <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
       </div>
       <div class="options">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Message">  
+        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Mensaje">  
       </div>
     </div>
   </div>
