create specials component

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -17,7 +17,7 @@
     <section class="airport-container" [routerLink]="['../airport']">
       <div class="button">VIAJE AEROPUERTO</div>
     </section>
-    <section class="specials-container">
+    <section class="specials-container" [routerLink]="['../specials']">
       <div class="button">ESPECIALES</div>
     </section>
   </section>
