--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -9,7 +9,8 @@
   </section>
   <section class="airport-gap-container">
     <div class="title">AEROPUERTOS CERCANOS</div>
-    <div class="toggle">MI UBICACION
+    <div class="toggle">
+      MI UBICACION
       <mat-slide-toggle></mat-slide-toggle>
     </div>
   </section>
