--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -22,7 +22,7 @@
         SERVICIO AL CLIENTE
   </div>
   <div class="row-sh">
-    <div class="shortcuts">
+    <div class="shortcuts" [routerLink]="['../faq']" >
       <div class="text">PREGUNTAS FRECUENTES</div>
     </div>
     <div class="shortcuts">
