--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="row-sh">
-    <div class="shortcuts">
+    <div class="shortcuts" [routerLink]="['../forgot-something']">
         <div class="text">OLVIDE ALGO</div>
     </div>
     <div class="shortcuts">
