profile icon hidden in profile view

--- a/src/app/shared/header/components/header.component.html
+++ b/src/app/shared/header/components/header.component.html
@@ -7,6 +7,8 @@
   <div class="header">
     <section class="header-wrapper">
       <img
+        class="profile"
+        *ngIf="!isProfileRoute()"
         src="assets/images/profile.svg"
         [routerLink]="['/profile']"
         alt="profile"
