--- a/src/app/shared/header/components/header.component.scss
+++ b/src/app/shared/header/components/header.component.scss
@@ -42,7 +42,11 @@
   border-radius: 0.5rem 1rem 1rem 0.5rem;
 
   .logo {
-    margin: 0.5rem 0 0 5rem;
+    margin: 0.5rem 0 0 0;
+  }
+
+  .profile {
+    margin-right: 5rem;
   }
 
   .d-flex {
