--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -4,20 +4,21 @@
     OLVIDE ALGO
   </div>
   <div class="info">
-  Si dejo algo olvidado contactanos Io mas
-  pronto posible, y brindenos la mayor cantidad
-  de detalles, Ie conectaremos directamente
-  con su chofer asignado. Puedes tambien
-  comunicarte via chat en vivo o llamar a
-  nuestros numeros de servicio al cliente que
-  24 horas del dia.
+    Si dejo algo olvidado contactanos Io mas
+    pronto posible, y brindenos la mayor cantidad
+    de detalles, Ie conectaremos directamente
+    con su chofer asignado. Puedes tambien
+    comunicarte via chat en vivo o llamar a
+    nuestros numeros de servicio al cliente que
+    24 horas del dia.
   </div>
   <div class="text">
     CUENTANOS
   </div>
-  <div class="message">
-    Tu mensaje aqui
-  </div>
+  <mat-form-field class="message">
+    <mat-label>Tu mensaje aqui</mat-label>   
+    <input matInput> 
+  </mat-form-field>
   <div class="sent">
     Enviar
   </div>
