--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -11,7 +11,7 @@
     <div class="title">AEROPUERTOS CERCANOS</div>
     <div class="toggle">
       MI UBICACION
-      <mat-slide-toggle></mat-slide-toggle>
+      <app-toggle-button></app-toggle-button>
     </div>
   </section>
   <section class="shared-container">
