--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -10,8 +10,7 @@
   <section class="airport-gap-container">
     <div class="title">AEROPUERTOS CERCANOS</div>
     <div class="toggle">
-      MI UBICACION
-      <app-toggle-button></app-toggle-button>
+      <app-toggle-button label="MI UBICACION"></app-toggle-button>
     </div>
   </section>
   <section class="shared-container">
