revert create airport commit

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -14,7 +14,7 @@
     </div>
   </section>
   <section class="shared-container">
-    <section class="airport-container" [routerLink]="['../airport']">
+    <section class="airport-container">
       <div class="button">VIAJE AEROPUERTO</div>
     </section>
     <section class="specials-container" [routerLink]="['../specials']">
