--- a/src/app/shared/Faq/components/faq.component.scss
+++ b/src/app/shared/Faq/components/faq.component.scss
@@ -13,27 +13,30 @@
 }
 
 .title {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2rem;
   font-size: 1.7rem;
   font-weight: bold;
 }
-.text {
-  flex-direction: row;
-  color: #3E4958;
-  width: 34.3rem;
 
+.text {
+  padding-bottom: 2rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  color: #3E4958;
+  width: 32rem;
+  
   .icon {
-    margin-bottom: 1rem;
-    color: #3E4958;
+    margin-right: 1rem;
+    color: #97ADB6;
     height: 1rem;
+    font-size: 1.6rem;
   }
 }
 
 .line {
-  width: 34.3rem;
-  opacity: 20%;
+  width: 32rem;
   margin-top: 0.2rem;
-  border-bottom: 0.2rem solid black;
+  border-bottom: 0.01rem solid #97adb631;
 }
-
