--- a/src/app/core/sass/_colors.scss
+++ b/src/app/core/sass/_colors.scss
@@ -3,6 +3,7 @@ $white: #FFF;
 $black: #000;
 $green: #00E741;
 $red: #E3000B;
+$line: #D5DDE0;
 
 $scheme: (
     biz-green: (
@@ -13,7 +14,8 @@ $scheme: (
         0: #CFCFCF,
         50: #AFAFAF,
         100: #AEAEAE,
-        200: #3E4958
+        200: #97ADB6,
+        300: #3E4958
     )
 );
 //
