--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -1,7 +1,8 @@
 <div class="container monserrat">
-  
+
   <div class="header-container">
-    
+    <app-shared-header></app-shared-header>
+
     <div class="profile-photo">
       <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png" alt="Profile Image">
     </div>
@@ -13,7 +14,7 @@
         <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
       </div>
       <div class="options">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Mensaje">  
+        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Mensaje">
       </div>
     </div>
   </div>
