--- a/src/app/shared/header/components/header.component.html
+++ b/src/app/shared/header/components/header.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="back-arrow">
+  <div class="back-arrow" (click)="goToPreviousPage()">
     <span class="material-icons-round icon">
       arrow_back_ios
     </span>
