--- a/src/app/shared/buttons/components/display-button/display-button.component.scss
+++ b/src/app/shared/buttons/components/display-button/display-button.component.scss
@@ -2,12 +2,23 @@
 
 .display-container {
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 13.2rem;
   width: 16.7rem;
   border-radius: 0.4rem;
   background-size: cover;
+
+  .title {
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+    font-weight: bold;
+    color: $white;
+    align-self: flex-start;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+  }
 }
 
 .button {
