--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -14,24 +14,12 @@
     </div>
   </section>
   <section class="shared-container">
-    <section class="first-container xpl">
-      <div class="title">XPL</div>
-      <div class="label">PALMEROLA</div>
-    </section>
-    <section class="second-container rvm">
-      <div class="title">RVM</div>
-      <div class="label">VILLEDA MORALES</div>
-    </section>
+    <app-display-button label="PALMEROLA" class="xpl" title="XPL"></app-display-button>
+    <app-display-button label="VILLEDA MORALES" class="rvm" title="RVM"></app-display-button>
   </section>
   <section class="shared-container">
-    <section class="first-container tct">
-      <div class="title">TCT</div>
-      <div class="label">TONCONTIN</div>
-    </section>
-    <section class="second-container gls">
-      <div class="title">GLS</div>
-      <div class="label">GOLOSON</div>
-    </section>
+    <app-display-button label="TONCONTIN" class="tct" title="TCT"></app-display-button>
+    <app-display-button label="GOLOSON" class="gls" title="GLS"></app-display-button>
   </section>
 
   <div class="main-button">
