--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -9,25 +9,17 @@
       <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png" alt="Profile Image">
     </div>
   </section>
-  <div class ='profile-name'>
+  <div class='profile-name'>
     <p class="name">PROFILE NAME</p>
   </div>
   <section class="profile-options">
     <div class="row">
-      <div class="top-left">
-        <div class="button">MIS VIAJES</div>
-      </div>
-      <div class="top-right">
-        <div class="button">MIS DATOS</div>
-      </div>
+      <app-display-button label="MIS VIAJES" class="top-left"></app-display-button>
+      <app-display-button label="MIS DATOS" class="top-right"></app-display-button>
     </div>
     <div class="row">
-      <div class="bottom-left">
-        <div class="button">INGRESAR TARJETA</div>
-      </div>
-      <div class="bottom-right">
-        <div class="button">NOTIFICACIONES</div>
-      </div>
+      <app-display-button label="INGRESAR TARJETA" class="bottom-left"></app-display-button>
+      <app-display-button label="NOTIFICACIONES" class="bottom-right"></app-display-button>
     </div>
   </section>
   <section class="customer-service" [routerLink]="['../customer-service']">
