--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -14,10 +14,8 @@
     </div>
   </section>
   <section class="shared-container">
-    <app-display-button label="VIAJE AEROPUERTO" [routerLink]="['../airport']"
-      class="airport-container"></app-display-button>
-    <app-display-button label="ESPECIALES" [routerLink]="['../specials']"
-      class="specials-container"></app-display-button>
+    <app-display-button label="VIAJE AEROPUERTO" routerLink="../airport" class="airport-container"></app-display-button>
+    <app-display-button label="ESPECIALES" routerLink="../specials" class="specials-container"></app-display-button>
   </section>
 </div>
 
