biz renamed to biiz

--- a/src/app/core/sass/_colors.scss
+++ b/src/app/core/sass/_colors.scss
@@ -6,7 +6,7 @@ $red: #E3000B;
 $line: #D5DDE0;
 
 $scheme: (
-    biz-green: (
+    biiz-green: (
         default: #00E741
     ),
     firm-gray: (
