create forgot-something module

--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -6,7 +6,7 @@
     <div class="profile-photo">
       <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png" alt="Profile Image">
     </div>
-    <div class ='profile-name'>
+    <div class='profile-name'>
       <p class="name">PROFILE NAME</p>
     </div>
     <div class="row">
@@ -19,22 +19,22 @@
     </div>
   </div>
   <div class="tittle">
-        SERVICIO AL CLIENTE
+    SERVICIO AL CLIENTE
   </div>
   <div class="row-sh">
-    <div class="shortcuts" [routerLink]="['../faq']" >
+    <div class="shortcuts" [routerLink]="['../faq']">
       <div class="text">PREGUNTAS FRECUENTES</div>
     </div>
     <div class="shortcuts">
-        <div class="text">SOBRE NOSOTROS</div>
+      <div class="text">SOBRE NOSOTROS</div>
     </div>
   </div>
   <div class="row-sh">
-    <div class="shortcuts">
-        <div class="text">OLVIDE ALGO</div>
+    <div class="shortcuts" [routerLink]="['../forgot-something']">
+      <div class=" text">OLVIDE ALGO</div>
     </div>
     <div class="shortcuts">
-        <div class="text">ME ACCIDENTE</div>
+      <div class="text">ME ACCIDENTE</div>
     </div>
   </div>
 </div>
