--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -15,7 +15,7 @@
   <div class="text">
     CUENTANOS
   </div>
-  <mat-form-field class="message">
+  <mat-form-field class="message mat-form-field-underline ">
     <mat-label>Tu mensaje aqui</mat-label>   
     <input matInput> 
   </mat-form-field>
