--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -31,7 +31,7 @@
   </div>
   <div class="row-sh">
     <div class="shortcuts" [routerLink]="['../customer/forgot-something']">
-      <div class=" text">OLVIDE ALGO</div>
+      <div class=" text">OLVIDé ALGO</div>
     </div>
     <div class="shortcuts">
       <div class="text">ME ACCIDENTE</div>
