replace profile component

--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -1,14 +1,7 @@
 <app-shared-header></app-shared-header>
 
 <div class="container monserrat">
-  <section class="profile-wrapper">
-    <div class="profile-photo">
-      <span class="material-icons-outlined icon">
-        edit
-      </span>
-      <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png" alt="Profile Image">
-    </div>
-  </section>
+  <app-profile-header imgSrc="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png"></app-profile-header>
   <div class='profile-name'>
     <p class="name">PROFILE NAME</p>
   </div>
