--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -31,10 +31,10 @@
   </div>
   <div class="row-sh">
     <div class="shortcuts" [routerLink]="['../customer/forgot-something']">
-      <div class=" text">OLVIDÉ ALGO</div>
+      <div class="text">OLVIDÉ ALGO</div>
     </div>
     <div class="shortcuts">
-      <div class="text">ME ACCIDENTE</div>
+      <div class="text">ME ACCIDENTÉ</div>
     </div>
   </div>
 </div>
