--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -1,5 +1,10 @@
 <app-shared-header></app-shared-header>
 
+<div class="main-button">
+  <app-calendar></app-calendar>
+</div>
+
+
 <div class="container monserrat">
   <section class="trip-container">
     <div class="button-container">
