--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -1,7 +1,7 @@
 <app-shared-header></app-shared-header>
 <section class="section monserrat">
   <div class="text">
-    OLVIDE ALGO
+    OLVIDÉ ALGO
   </div>
   <div class="info">
     Si dejo algo olvidado contactanos Io mas
