--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -1,25 +1,33 @@
 <app-shared-header></app-shared-header>
-<section class="section monserrat">
-  <div class="text">
+<section class="section">
+  <div class="text monserrat">
     OLVIDÉ ALGO
   </div>
   <div class="info">
-    Si dejo algo olvidado contactanos Io mas
+    Si dejó algo olvidado contactanos Io más
     pronto posible, y brindenos la mayor cantidad
     de detalles, Ie conectaremos directamente
-    con su chofer asignado. Puedes tambien
-    comunicarte via chat en vivo o llamar a
-    nuestros numeros de servicio al cliente que
-    24 horas del dia.
+    con su chofer asignado. Puedes también
+    comunicarte vía chat en vivo o llamar a
+    nuestros números de servicio al cliente que
+    24 horas del día.
   </div>
-  <div class="text">
+  <div class="text monserrat">
     CUENTANOS
   </div>
-  <mat-form-field class="message mat-form-field-underline ">
-    <mat-label>Tu mensaje aqui</mat-label>   
-    <input matInput> 
-  </mat-form-field>
-  <div class="sent">
-    Enviar
-  </div>
+  <form [formGroup]="forgotSomethingForm">
+    <mat-form-field class="form-field">
+      <textarea
+        class="multiline-input"
+        placeholder="Tu mensaje aquí"
+        matInput
+        formControlName="message"
+        maxlength="500"
+        minlength="1"
+        rows="9"
+        required
+      ></textarea>
+    </mat-form-field>
+  </form>
+  <app-primary-button>ENVIAR</app-primary-button>
 </section>
