--- a/src/app/passengers/containers/forgot-something/forgot-something.component.scss
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.scss
@@ -4,41 +4,30 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  color: setColor(firm-gray, 300);
 }
 
 .text {
-  color: setColor(firm-gray, 300);
+  display: flex;
+  margin: 1rem 0;
+  width: 33.3rem;
+  justify-content: flex-start;
   font-weight: bold;
-  margin-right: 23.8rem;
-  margin-bottom: 1rem;
-  margin-top: 2rem;
-  align-items: start;
 }
 
 .info {
-  color: setColor(firm-gray, 300);
   text-align: justify;
-  width: 34.2rem;
+  font-size: 1.5rem;
+  width: 33.3rem;
 }
 
-.message {
-  color: $black;
-  padding: 0.5rem;
-  background-color: $gray;
-  width: 32.8rem;
-  height: 25.2rem;
-  border-radius: 0.6rem;
-}
+.form-field {
+  width: 33.3rem;
+  height: 25.7rem;
 
-.sent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: white;
-  margin-top: 2rem;
-  width: 34.2rem;
-  height: 6.1rem;
-  background-color: $black;
-  border-radius: 0.4rem;
+  .multiline-input {
+    resize: vertical;
+    height: auto;
+    padding-top: 1rem;
+  }
 }
