fixed background images

--- a/src/app/passengers/containers/airport/airport.component.scss
+++ b/src/app/passengers/containers/airport/airport.component.scss
@@ -78,6 +78,7 @@
 
 .rvm {
   background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/airport-location-3.png');
+  background-repeat: no-repeat;
 }
 
 .tct {
@@ -86,6 +87,7 @@
 
 .gls {
   background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/airport-location-2.png');
+  background-repeat: no-repeat;
 }
 
 .label {
