--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -33,7 +33,7 @@
     <div class="shortcuts" [routerLink]="['../passenger/forgot-something']">
       <div class="text">OLVIDÉ ALGO</div>
     </div>
-    <div class="shortcuts">
+    <div class="shortcuts" [routerLink]="['../passenger/accident']">
       <div class="text">ME ACCIDENTÉ</div>
     </div>
   </div>
