--- a/src/app/passengers/containers/accident/accident.component.scss
+++ b/src/app/passengers/containers/accident/accident.component.scss
@@ -21,8 +21,13 @@
   width: 33.3rem;
 }
 
-.mat-mdc-radio-button ~ .mat-mdc-radio-button {
-  margin-left: 19rem;
+.radio-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.radio-buttons mat-radio-button {
+  margin-right: 1rem;
 }
 
 .material-icons {
@@ -32,12 +37,13 @@
 }
 
 .form-field {
+  display: flex;
   width: 33.3rem;
   height: 25.7rem;
+}
 
-  .multiline-input {
-    resize: vertical;
-    height: auto;
-    padding-top: 1rem;
-  }
+.multiline-input {
+  resize: vertical;
+  height: auto;
+  padding-top: 1rem;
 }
