--- a/src/app/passengers/containers/accident/accident.component.html
+++ b/src/app/passengers/containers/accident/accident.component.html
@@ -17,7 +17,7 @@
       <mat-radio-group aria-label="Select an option" formControlName="gotHurt">
         <div class="radio-buttons">
           <mat-radio-button value="true">SI</mat-radio-button>
-          <mat-radio-button value="false">NO</mat-radio-button>
+          <mat-radio-button value="false" [checked]="accidentForm.get('gotHurt')?.value === false">NO</mat-radio-button>
         </div>
       </mat-radio-group>
       <div class="text monserrat">
