nav bar icons and styles updated

--- a/src/app/shared/header/components/header/header.component.html
+++ b/src/app/shared/header/components/header/header.component.html
@@ -16,11 +16,8 @@
       <img class="logo" (click)='navigate()' src="assets/images/logo.svg" alt="Logo">
 
       <div class="d-flex">
-        <img src="assets/images/weather.svg" alt="weather">
-        <section class="translate">
-          <img class="translate-icon" src="assets/images/translate.svg" alt="translate">
-          <p class="translate-label">ESP</p>
-        </section>
+        <img class="weather" src="assets/images/weather.svg" alt="weather">
+        <img class="translate" src="assets/images/translate.svg" alt="translate">
       </div>
     </section>
   </div>
