app builds completed, login centered and header fix

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,2 +1,4 @@
-<p>login works!</p>
-<button (click)="onSubmit()">INICIO DE CUSTOMER</button>
+<div class="container">
+  <p>login works!</p>
+  <button (click)="onSubmit()">INICIO DE CUSTOMER</button>
+</div>
