--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -25,7 +25,7 @@
   gap: 0.5rem;
   align-content: center;
   flex-wrap: wrap;
-  margin: 2rem 0;
+  margin: 5rem 0 2rem;
 
   .header {
     display: flex;
