--- a/src/app/shared/buttons/components/display-button/display-button.component.html
+++ b/src/app/shared/buttons/components/display-button/display-button.component.html
@@ -1,4 +1,4 @@
 <section class="display-container" [attr.routerLink]="routerLink !== '' ? routerLink : null">
   <div class="title">{{ title }}</div>
-  <div class="label">{{ label }}</div>
+  <app-white-button [message]="message"></app-white-button>
 </section>
