--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -1,9 +1,7 @@
 <app-shared-header></app-shared-header>
-
 <div class="main-button">
   <app-primary-button>MIS VIAJES</app-primary-button>
 </div>
-
 <div class="container monserrat">
   <section class="airport-banner-container">
   </section>
@@ -14,14 +12,13 @@
     </div>
   </section>
   <section class="shared-container">
-    <app-display-button label="PALMEROLA" class="xpl" title="XPL"></app-display-button>
-    <app-display-button label="VILLEDA MORALES" class="rvm" title="RVM"></app-display-button>
+    <app-display-button message="PALMEROLA" class="xpl" title="XPL"></app-display-button>
+    <app-display-button message="VILLEDA MORALES" class="rvm" title="RVM"></app-display-button>
   </section>
   <section class="shared-container">
-    <app-display-button label="TONCONTIN" class="tct" title="TCT"></app-display-button>
-    <app-display-button label="GOLOSON" class="gls" title="GLS"></app-display-button>
+    <app-display-button message="TONCONTIN" class="tct" title="TCT"></app-display-button>
+    <app-display-button message="GOLOSON" class="gls" title="GLS"></app-display-button>
   </section>
-
   <div class="main-button">
     <app-primary-button>CONFIRMAR DESTINO</app-primary-button>
   </div>
