--- a/src/app/shared/profile/components/profile/profile.component.scss
+++ b/src/app/shared/profile/components/profile/profile.component.scss
@@ -8,66 +8,64 @@
   gap: 0.15rem;
 }
 
-.profile-photo {
-  position: relative;
-}
-
-.profile-wrapper {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
 .row {
-  margin-left: -0.3rem;
   display: flex;
   width: 34.3rem;
   gap: 0.6rem;
+  margin-left: 0.3rem;
+}
 
-  .top-left,
-  .top-right,
-  .bottom-left,
-  .bottom-right {
-    font-size: 0.8rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    width: 17rem;
-    height: 14.5rem;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    border-radius: 0.3rem;
+.top-left,
+.top-right,
+.bottom-left,
+.bottom-right {
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  width: 17rem;
+  height: 14.5rem;
+  display: flex;
+  justify-content: center;
+  border-radius: 0.3rem;
+  align-items: flex-end;
+}
 
-    .button {
-      display: flex;
-      justify-content: center;
-      background-color: $white;
-      width: 11.7rem;
-      margin-bottom: 1.5rem;
-      border-radius: 0.3rem;
-    }
-  }
+.button {
+  display: flex;
+  justify-content: center;
+  background-color: $white;
+  width: 11.7rem;
+  margin-bottom: 1.5rem;
+  border-radius: 0.3rem;
+}
 
-  .top-left {
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-top-left.png');
-  }
+.top-left {
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-top-left.png');
+  background-repeat: no-repeat;
+}
 
-  .top-right {
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-top-right.png');
-  }
+.top-right {
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-top-right.png');
+  background-repeat: no-repeat;
+}
 
-  .bottom-left {
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-bottom-left.png');
-  }
+.bottom-left {
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-bottom-left.png');
+  background-repeat: no-repeat;
+}
 
-  .bottom-right {
-    background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-bottom-right.png');
-  }
+.bottom-right {
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/car-bottom-right.png');
+  background-repeat: no-repeat;
+}
 
-  .image {
-    width: 6.8rem;
-    height: 3.8rem;
-  }
+.image {
+  width: 6.8rem;
+  height: 3.8rem;
+}
+
+.app-white-button {
+  margin-bottom: 0;
 }
 
 .icon {
@@ -95,11 +93,11 @@
   align-self: center;
   justify-content: center;
   align-items: center;
+}
 
-  .name {
-    margin: 0;
-    font-weight: bold;
-  }
+.profile-name .name {
+  margin: 0;
+  font-weight: bold;
 }
 
 .profile-options {
@@ -121,21 +119,21 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+}
 
-  .image {
-    width: 6.8rem;
-    align-self: flex-end;
-    margin-right: 5rem;
-  }
+.customer-service .image {
+  width: 6.8rem;
+  align-self: flex-end;
+  margin-right: 5rem;
+}
 
-  .service-label {
-    margin-bottom: 1.5rem;
-    font-weight: bold;
-    text-align: center;
-    background-color: $white;
-    width: 24.1rem;
-    border-radius: 0.4rem;
-  }
+.customer-service .service-label {
+  margin-bottom: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  background-color: $white;
+  width: 24.1rem;
+  border-radius: 0.4rem;
 }
 
 .main-button {
