overall improvements of the css

--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -12,12 +12,28 @@
     </div>
   </section>
   <section class="shared-container">
-    <app-display-button message="PALMEROLA" class="xpl" title="XPL"></app-display-button>
-    <app-display-button message="VILLEDA MORALES" class="rvm" title="RVM"></app-display-button>
+    <app-display-button
+      message="PALMEROLA"
+      class="xpl display-btn"
+      title="XPL"
+    ></app-display-button>
+    <app-display-button
+      message="VILLEDA MORALES"
+      class="rvm display-btn"
+      title="RVM"
+    ></app-display-button>
   </section>
   <section class="shared-container">
-    <app-display-button message="TONCONTIN" class="tct" title="TCT"></app-display-button>
-    <app-display-button message="GOLOSON" class="gls" title="GLS"></app-display-button>
+    <app-display-button
+      message="TONCONTIN"
+      class="tct display-btn"
+      title="TCT"
+    ></app-display-button>
+    <app-display-button
+      message="GOLOSON"
+      class="gls display-btn"
+      title="GLS"
+    ></app-display-button>
   </section>
   <div class="main-button">
     <app-primary-button>CONFIRMAR DESTINO</app-primary-button>
