--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,8 @@ a {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.05rem;
 }
+
+.display-btn {
+  border-radius: 0.5rem;
+  background-size: cover;
+}
