--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -11,8 +11,16 @@
     </div>
   </section>
   <section class="shared-container">
-    <app-display-button message ="VIAJE AEROPUERTO" routerLink="../airport" class="airport-container"></app-display-button>
-    <app-display-button message="ESPECIALES" routerLink="../specials" class="specials-container"></app-display-button>
+    <app-display-button
+      message ="VIAJE AEROPUERTO"
+      routerLink="../airport"
+      class="airport-container display-btn"
+    ></app-display-button>
+    <app-display-button
+      message="ESPECIALES"
+      routerLink="../specials"
+      class="specials-container display-btn"
+    ></app-display-button>
   </section>
 </div>
 
