add missing profile-name

--- a/src/app/shared/header/components/profile-header/profile-header.component.html
+++ b/src/app/shared/header/components/profile-header/profile-header.component.html
@@ -8,3 +8,6 @@
     <img [src]="imgSrc" alt="Profile Image">
   </div>
 </div>
+<div class='profile-name'>
+  <p class="name" [textContent]="profileName"></p>
+</div>
