--- a/src/app/shared/header/components/profile-header/profile-header.component.scss
+++ b/src/app/shared/header/components/profile-header/profile-header.component.scss
@@ -10,6 +10,21 @@
   gap: 1rem;
 }
 
+.profile-name {
+  font-size: 1rem;
+  display: flex;
+  text-align: center;
+  color: white;
+  margin-top: -2rem;
+  background-color: $black;
+  width: 34rem;
+  height: 7.5rem;
+  border-radius: 0.4rem;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+}
+
 .icon {
   margin-bottom: 0.5rem;
   background-color: $green;
