--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -1,14 +1,8 @@
 <div class="container monserrat">
-
   <div class="header-container">
     <app-shared-header></app-shared-header>
-
-    <div class="profile-photo">
-      <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png" alt="Profile Image">
-    </div>
-    <div class='profile-name'>
-      <p class="name">PROFILE NAME</p>
-    </div>
+    <app-profile-header imgSrc="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png"
+      profileName="STEPH MENA AGUILAR"></app-profile-header>
     <div class="row">
       <div class="options">
         <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
@@ -18,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="tittle">
+  <div class="title">
     SERVICIO AL CLIENTE
   </div>
   <div class="row-sh">
