--- a/src/app/shared/customer-service/components/customer-service.component.scss
+++ b/src/app/shared/customer-service/components/customer-service.component.scss
@@ -17,29 +17,6 @@
   align-items: center;
 }
 
-.profile-name {
-  font-size: 0.8rem;
-  display: flex;
-  text-align: center;
-  color: $white;
-  background-color: $black;
-  width: 34rem;
-  height: 7.5rem;
-  border-radius: 0.4rem;
-  align-self: center;
-  justify-content: center;
-  align-items: center;
-
-  .name {
-    margin: 0;
-    font-weight: bold;
-  }
-}
-
-.profile-photo {
-  position: relative;
-}
-
 .options {
   margin: 0.5rem;
   font-size: 0.8rem;
@@ -56,7 +33,7 @@
   font-weight: bold;
 }
 
-.tittle {
+.title {
   padding: 1.5rem;
   font-size: 1rem;
   color: $black;
