--- a/src/app/shared/buttons/components/base-button.component.scss
+++ b/src/app/shared/buttons/components/base-button.component.scss
@@ -8,9 +8,32 @@
   min-height: 6rem;
   min-width: 34.2rem;
   letter-spacing: 0.1rem;
+  position: relative;
+  overflow: hidden;
 }
 
 .btn-black {
   background-color: $black;
   color: $white;
 }
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $green;
+  width: 2.5rem;
+  height: 1.5rem;
+  border-radius: 0.4rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  margin-right: 0.5rem;
+  margin-top: 0.3rem;
+
+  .icon {
+    font-size: 1.2rem;
+    color: $black;
+  }
+}
+
